2006-04-29 Patrick Galbraith <patg@mysql.com> (3.0003)
  * Fix to typo in Makefile.PL (Thanks Martin Evans!)
  * Added mysql_stmt_reset for when mysql_stmt_execute fails
  * Added test for mysql_stmt_execute bug (Martin Evans)
  * Fixed syntax for create table ENGINE=InnoDB isntead of type=innobase
  * Removed tests for old driver emulation

2005-07-07 Patrick Galbraith <patg@mysql.com> (3.0002)
  * Fix to ensure MYSQL_BIND is only defined when mysql
    client version is >= 4.1.3. Thanks to Tom Parkison, 
    Anup Singh, Sergey Skvortsov, and other users who informed
    me about this issue.

2005-07-06 Patrick Galbraith <patg@mysql.com> (3.0001)
  * Special Thanks to Steve Hay for his patch to fix windows 
    compiles!
  * Changed uint argument in safe_sv_fetch to int due to 
    uint not being available on windows unless you include
    my_globals.h in dbdimp.h, which also breaks on unixen!
  * Fixed Makefile.PM for windows compiles (thanks to Steve Hay!)
  * Removed long long type from dbdimp.h
  * Changed strncasecmp to strncmp (still need a better long-term solution)
    in dbdimp.c
  * Modified Makefile.PM to make prepared statements default
  * Removed // comments from mysql.xs, dbdimp.c (Thanks Bodo Bergmann!)
  * Fixed runtime bug (when inserting or updating quotes or double quotes)
    (Thanks to Brad Choate)

2005-06-30 Patrick Galbraith <patg@mysql.com> (3.0000)
  * Release of prepared statement code

2005-04-26 Patrick Galbraith <patg@mysql.com> (2.9015_3)
  * Added patch from Stas Beckman for new DBI feature take_imp_data, needed
   for DBI::Pool
  * Fix to Statement.pm for old API call for numfields that caused
    warnings on 40numrows and akmisc tests
  * Fix to bind_ph to throw an error if trying to bind a non-numeric 
    value as numeric
  * Better fix for dealing with error condition in $sth->rows()
  * Fix to bind_param to throw error when trying to bind a non-numeric as
    numeric


2005-04-04 Patrick Galbraith <patg@mysql.com> (2.9015_2)