@@ -78,7 +78,7 @@ MSG
       print <<MSG;
 
 Cannot find the file 'mysql_config'! Your execution PATH doesn't seem 
-not contain the path to mysql_config. Resorting to guessed values!
+to contain the path to mysql_config. Resorting to guessed values!
 MSG
     }
     $opt->{'mysql_config'} = "mysql_config";
@@ -285,28 +285,21 @@ if ($opt->{'embedded'})
                        't/60leaks.t' => { filename => 'mysqlEmb/t/60leaks.t',
                                                                     makedir => 'mysqlEmb/t'
                                                                   },
-                       't/ak-dbd.t' => { filename => 'mysqlEmb/t/ak-dbd.t',
-                                                                    makedir => 'mysqlEmb/t'
-                                                                  },
-                       't/akmisc.t' => { filename => 'mysqlEmb/t/akmisc.t',
-                                                                    makedir => 'mysqlEmb/t'
-                                                                  },
                        't/dbdadmin.t' => { filename => 'mysqlEmb/t/dbdadmin.t',
                                                                     makedir => 'mysqlEmb/t'
                                                                   },
                        't/insertid.t' => { filename => 'mysqlEmb/t/insertid.t',
                                                                     makedir => 'mysqlEmb/t'
                                                                   },
-                       't/mysql.t' => { filename => 'mysqlEmb/t/mysql.t',
-                                                                    makedir => 'mysqlEmb/t'
-                                                                  },
-                       't/mysql2.t' => { filename => 'mysqlEmb/t/mysql2.t',
-                                                                    makedir => 'mysqlEmb/t'
-                                                                  },
                        't/00base.t' => { filename => 'mysqlEmb/t/00base.t',
                                                                     makedir => 'mysqlEmb/t'
                                                                   },
-
+                       't/texecute.t' => { filename => 'mysqlEmb/t/texecute.t',
+                                                                    makedir => 'mysqlEmb/t'
+                                                                  },
+                       't/param_values.t' => { filename => 'mysqlEmb/t/param_values.t',
+                                                                    makedir => 'mysqlEmb/t'
+                                                                  },
                        'myld' => { filename => 'mysqlEmb/myld',
                                    makedir => 'mysqlEmb'
                                  },
