@@ -2235,10 +2235,9 @@ dbd_st_prepare(
 
     if (mysql_stmt_prepare(imp_sth->stmt, statement, statement_length))
     {
-
+      do_error(sth, mysql_errno(&imp_dbh->mysql), mysql_error(&imp_dbh->mysql));
       mysql_stmt_close(imp_sth->stmt);
       imp_sth->stmt= NULL;
-      do_error(sth, mysql_errno(&imp_dbh->mysql), mysql_error(&imp_dbh->mysql));
 
       /* For commands that are not supported by server side prepared statement
          mechanism lets try to pass them through regular API */
@@ -3392,6 +3391,24 @@ dbd_st_FETCH_internal(
   case 'P':
     if (strEQ(key, "PRECISION"))
       retsv= ST_FETCH_AV(AV_ATTRIB_PRECISION);
+    if (strEQ(key, "ParamValues"))
+    {
+        HV *pvhv= newHV();
+        if (DBIc_NUM_PARAMS(imp_sth))
+        {
+            unsigned int n;
+            SV *sv;
+            char key[100];
+            I32 keylen;
+            for (n= 0; n < DBIc_NUM_PARAMS(imp_sth); n++)
+            {
+                keylen= sprintf(key, "%d", n);
+                hv_store(pvhv, key, keylen,
+                         newSVsv(imp_sth->params[n].value), 0);
+            }
+        }
+        retsv= newRV_noinc((SV*)pvhv);
+    }
     break;
   case 'S':
     if (strEQ(key, "SCALE"))
